; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_matrix_rotaa.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_matrix_rotaa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.axisang = type { i32 }
%struct.matrix4 = type { i32 }

@.str = private unnamed_addr constant [16 x i8] c"gs_matrix_rotaa\00", align 1
@thread_graphics = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gs_matrix_rotaa(%struct.axisang* %0) #0 {
  %2 = alloca %struct.axisang*, align 8
  %3 = alloca %struct.matrix4*, align 8
  store %struct.axisang* %0, %struct.axisang** %2, align 8
  %4 = call i32 @gs_valid(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %17

7:                                                ; preds = %1
  %8 = load i32, i32* @thread_graphics, align 4
  %9 = call %struct.matrix4* @top_matrix(i32 %8)
  store %struct.matrix4* %9, %struct.matrix4** %3, align 8
  %10 = load %struct.matrix4*, %struct.matrix4** %3, align 8
  %11 = icmp ne %struct.matrix4* %10, null
  br i1 %11, label %12, label %17

12:                                               ; preds = %7
  %13 = load %struct.matrix4*, %struct.matrix4** %3, align 8
  %14 = load %struct.axisang*, %struct.axisang** %2, align 8
  %15 = load %struct.matrix4*, %struct.matrix4** %3, align 8
  %16 = call i32 @matrix4_rotate_aa_i(%struct.matrix4* %13, %struct.axisang* %14, %struct.matrix4* %15)
  br label %17

17:                                               ; preds = %6, %12, %7
  ret void
}

declare dso_local i32 @gs_valid(i8*) #1

declare dso_local %struct.matrix4* @top_matrix(i32) #1

declare dso_local i32 @matrix4_rotate_aa_i(%struct.matrix4*, %struct.axisang*, %struct.matrix4*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
